Fix filterpill align

--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -199,3 +199,7 @@
     margin-left:10px; 
     margin-right:10px
 }
+
+.wz-inline-block {
+    display: inline;
+}
